--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@bugsnag/js": "^6.5.2",
     "@bugsnag/plugin-react": "^6.5.0",
-    "@hashicorp/nextjs-scripts": "^6.2.0-9",
+    "@hashicorp/nextjs-scripts": "^6.1.0-prism.0",
     "@hashicorp/react-alert": "^2.0.0",
     "@hashicorp/react-alert-banner": "^3.0.11",
     "@hashicorp/react-button": "^2.1.6",
